--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>find_leap_year</name>
+	<name>check_positive_negative_num</name>
 	<comment></comment>
 	<projects>
 	</projects>
