Sum of natural numbers

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Check_letter_Alphabet_or_Not</name>
+	<name>Sum_of_natural_numbers</name>
 	<comment></comment>
 	<projects>
 	</projects>
