Factorial of number

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Sum_of_natural_numbers</name>
+	<name>Factorial_of_Number</name>
 	<comment></comment>
 	<projects>
 	</projects>
