Print A to Z using for loop

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lcm_of_two_numbers</name>
+	<name>Print_A_to_Z</name>
 	<comment></comment>
 	<projects>
 	</projects>
