Find the number of digits in integer

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Print_A_to_Z</name>
+	<name>find_noOf_digit_integer</name>
 	<comment></comment>
 	<projects>
 	</projects>
