--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>find_noOf_digit_integer</name>
+	<name>Reverse_a_number</name>
 	<comment></comment>
 	<projects>
 	</projects>
