check armstrong number

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>C_Program_to_Display_Prime_Numbers</name>
+	<name>check_armstrong_number</name>
 	<comment></comment>
 	<projects>
 	</projects>
